# envAsistenmu

./: docker-compose-django.yml  pyproject.toml
core/: settings.py  urls.py  views.py
envasistenmu/: base.html  index.html  properties-single.html  properties.html  single.html
